# uma_robotics_2025

./: .gitignore  pyproject.toml
.virtual_documents/Chapter 03. Robot motion/: 3.1 Motion through pose composition.ipynb
Chapter 02. Probability and statistic bases/: 2.1 Probability and Statistics Bases for Robotics.ipynb
Chapter 03. Robot motion/: 3.1 Motion through pose composition.ipynb  3.2 Velocity-based motion model.ipynb  3.3 Odometry-based motion model.ipynb
Chapter 04. Robot sensing/: 4.1 Landmark-based models.ipynb
Chapter 05. Localization/: 5-Localization-1-LeastSquares.ipynb  5-Localization-2-EKF.ipynb
Chapter 06. Mapping/: 6.3 Occupancy grid map building.ipynb
