[project]
name = "uma-robotics-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipympl==0.9.2",
    "ipywidgets==8.0.2",
    "matplotlib==3.6.0",
    "nbconvert>=7.16.4",
    "numpy==1.23.3",
    "pandas==1.5.0",
    "scipy==1.9.1",
]
